fix: remove body overlay only on mobile screens

--- a/public/scss/components/Layout.module.scss
+++ b/public/scss/components/Layout.module.scss
@@ -4,6 +4,9 @@
 {
     &__noOverflow
     {
-        overflow: hidden;
+        @media (max-width: #{$breakpoint_max_lg})
+        {
+            overflow: hidden;
+        }
     }
 }
